--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=client-management
 # ===============================
 # = Datasource
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/gestion_clientes?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
@@ -24,8 +24,8 @@ spring.flyway.locations=classpath:db/migration
 # ===============================
 # = JWT
 # ===============================
-jwt.secret=your-secret-key-here-must-be-very-long-and-secure
-jwt.expiration=86400000
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
 
 # Habilitar solo algunos endpoints de actuator
 management.endpoints.web.exposure.include=health,httptrace,info,metrics,env,loggers
