add test and config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.application.name=client-management
+server.port=8080
 
 # ===============================
 # = Datasource
 # ===============================
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
@@ -21,11 +19,7 @@ spring.jpa.show-sql=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
-# ===============================
-# = JWT
-# ===============================
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
-
 # Habilitar solo algunos endpoints de actuator
 management.endpoints.web.exposure.include=health,httptrace,info,metrics,env,loggers
+
+spring.profiles.active=dev
